Add menuconfig figure

--- a/md/2012 임베디드 시스템 프로그래밍 기말시험.md
+++ b/md/2012 임베디드 시스템 프로그래밍 기말시험.md
@@ -270,7 +270,7 @@ $ menuconfig
     x86 어쩌고 하는 항목만 있고 정작 arm 프로세서에 관한 내용을 찾을 수 없는 것이다. 철이는
     뭘 빼먹은 것일까?
 
-    ![menuconfig](https://cloud.githubusercontent.com/assets/3622008/25200418/3a27fa16-2589-11e7-8ff3-b071c676ee31.png)
+    ![menuconfig]( https://raw.githubusercontent.com/kdzlvaids/esp2017/figures/menuconfig.png )
 
     ### 예상답안
 
