--- a/md/2012 임베디드 시스템 프로그래밍 기말시험.md
+++ b/md/2012 임베디드 시스템 프로그래밍 기말시험.md
@@ -269,7 +269,7 @@ $ menuconfig
     x86 어쩌고 하는 항목만 있고 정작 arm 프로세서에 관한 내용을 찾을 수 없는 것이다. 철이는
     뭘 빼먹은 것일까?
 
-    ![menuconfig]( https://raw.githubusercontent.com/kdzlvaids/esp2017/figures/menuconfig.png )
+    ![menuconfig]( https://github.com/kdzlvaids/esp2017/raw/master/figures/menuconfig.png )
 
     ### 예상답안
 
