Fix the font size, which was weird

--- a/md/2016 임베디드시스템 프로그래밍 II 기말고사.md
+++ b/md/2016 임베디드시스템 프로그래밍 II 기말고사.md
@@ -12,6 +12,10 @@
 ## 문제 1
 BBB의 P9_13번 핀에 연결된 LED를 0.5초 단위로 점멸하는 C 혹은 C++ 프로그램을 작성하라.
 
+### 참고사항
+-   P9 헤더의 13번 핀은 GPIO0_31이며,
+    sysfs class의 `/sys/class/gpio/gpio31`로 접근할 수 있다.
+
 ### 예상답안
 
 *[예제 보기]( https://github.com/kdzlvaids/esp2017/tree/master/%EC%98%88%EC%A0%9C/BBB%20LED%20%EC%A0%90%EB%A9%B8 )*
@@ -94,10 +98,6 @@ main(void)
 }
 ```
 
-### 참고사항
--   P9 헤더의 13번 핀은 GPIO0_31이며,
-    sysfs class의 `/sys/class/gpio/gpio31`로 접근할 수 있다.
-
 
 ## 문제 2
 test_callback.cpp 프로그램에서 inGPIO->waitForEdge(&activateLED, k)로 호출하고 버튼을
@@ -106,7 +106,7 @@ k번 누르면 Button pressed라고 출력하고 종료하도록 수정하라. G
 해결하라. Button Pressed라는 메시지는 반드시 callback 함수인 activateLED 함수에 의해서
 출력되도록 하라.
 
-# 예상답안
+### 예상답안
 
 ```cpp
 ```
@@ -127,7 +127,7 @@ $ cat /dev/mymiscdev
 k
 ```
 
-# 예상답안
+### 예상답안
 
 ```c
 ```
