Correct the answers

--- a/md/2012 임베디드 시스템 프로그래밍 기말시험.md
+++ b/md/2012 임베디드 시스템 프로그래밍 기말시험.md
@@ -275,7 +275,8 @@ $ menuconfig
 
     ```bash
     $ export ARCH="arm"
-    $ export CROSS_COMPILE="armv8l-linux-gnueabihf-"
+    $ export CROSS_COMPILE="arm-linux-gnueabihf-"
+    $ make versatile_defconfig
     ```
 
 -   나) 철이는 (가) 항목의 문제를 무사히 해결하였다. 하지만 막상 커널을 설정하려니 아는 것이
@@ -286,4 +287,5 @@ $ menuconfig
 
     ```bash
     $ make versatile_defconfig
+    $ cat .config # make versatile_defconfig을 통해 설정 된 값(versatilepb의 기본값)이 저장되는 파일
     ```
